# mentorship-backend-learning-journey-2026

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
services/api/: Dockerfile  alembic.ini
services/api/migrations/: env.py
services/api/migrations/versions/: 001_init_users_subscriptions.py  1ca4bf70dfa7_create_alerts_table.py  bfb92838e0b6_add_indexes_to_subscriptions.py
services/api/scripts/: analyze_queries.py
services/api/src/: main.py
services/api/src/core/: config.py  enums.py
services/api/src/db/: base.py  database.py
services/api/src/domains/alerts/: models.py  repository.py  router.py  schemas.py  service.py
services/api/src/domains/subscriptions/: models.py  repository.py  router.py  schemas.py  service.py
services/api/src/domains/users/: models.py  repository.py  router.py  schemas.py  service.py
sprints/: sprint-01.md
tests/: conftest.py  factories.py
tests/domains/subscriptions/: test_create_subscription.py  test_delete_subscription.py  test_list_subscriptions.py  test_query_count.py  test_stats.py  test_update_subscription.py
tests/domains/users/: test_create_user.py  test_get_user.py  test_list_users.py  test_stats.py  test_update_user.py
